--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "ejs": "^3.0.1",
     "express": "^4.17.1",
     "express-session": "^1.17.0",
+    "express-validation": "^1.0.3",
     "mysql2": "^2.1.0",
     "sequelize": "^5.21.3"
   },
