--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "express": "^4.17.1",
     "express-session": "^1.17.0",
     "express-validation": "^1.0.3",
+    "mssql-session-store": "^1.0.0",
     "mysql2": "^2.1.0",
     "sequelize": "^5.21.3"
   },
