--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
     "express-validation": "^1.0.3",
     "mssql-session-store": "^1.0.0",
     "mysql2": "^2.1.0",
+    "nodemailer": "^6.4.2",
+    "nodemailer-sendgrid-transport": "^0.2.0",
     "sequelize": "^5.21.3"
   },
   "devDependencies": {},
